# qastilog

./: 404.html  CMakeLists.txt  CNAME  README.md  as  as.pub  build.yml  index.html  mod.json
data/: acme.json  marcosai  marcosai.json  nova.json  pixel.json  qasti.json
src/: main.cpp
